<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:fontFamily="serif-monospace"
        android:letterSpacing="0.1"
        android:text="@string/str_heading"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutLin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView11"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="220dp"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/idWei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/str_wei"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#ABFFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/idHei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="12"
            android:hint="@string/str_hei"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#ADFFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/idBtnBmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btnstyle"
            android:onClick="btnBMI"
            android:text="@string/str_bmi_btn"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="#FFFFFF"
            android:id="@+id/idResult"
            android:layout_marginTop="30dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif-monospace"
        android:letterSpacing="0.1"
        android:text="@string/str_owner"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>